--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,16 +1,22 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: "Roboto", sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
-  outline: none;
+	box-sizing: border-box;
+	outline: none;
+}
+
+.content {
+	max-width: 640px;
+	width: 100%;
+	margin: 0 auto;
 }
